gallery and buttons

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                            <li><a href="#">Контакты</a></li>
                         </ul>
                      </div>
-                     <div class="col-xs-12 visible-xs visible-sm">
+                     <div class="col-xs-12 visible-xs visible-sm mobile-wrapper">
                         <!-- mobile menu -->
-                        <ul class="nav  mobile">
+                        <ul class="nav mobile">
                            <li class="active"><a href="#">Главная</a></li>
                            <li><a href="#">Услуги</a></li>
                            <li><a href="#">Портфолио</a></li>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-xs-12 col-md-6 service-box">
                <a class="pagelink" href="#">
-                  <div class="service-one wow zoomIn" data-wow-delay="0.4s"></div>
+                  <div class="service-one wow zoomIn" data-wow-delay="0.3s"></div>
                   <capture>
                      <h3>разработка сайтов</h3>
                      <p>Жизнеспособные сайты с современным дизайном, <br>
@@ -154,7 +154,7 @@
                </div> -->
             <div class="col-xs-12 col-md-6 service-box">
                <a class="pagelink" href="#">
-                  <div class="service-three wow zoomIn" data-wow-delay="0.4s"></div>
+                  <div class="service-three wow zoomIn" data-wow-delay="0.3s"></div>
                   <capture>
                      <h3>привлечение клиентов</h3>
                      <p>Анализ вашей бизнес-политики, сайта, составление <br>
@@ -167,7 +167,7 @@
             </a>
             <div class="col-xs-12 col-md-6 service-box">
                <a class="pagelink" href="#">
-                  <div class="service-four wow zoomIn" data-wow-delay="0.4s"></div>
+                  <div class="service-four wow zoomIn" data-wow-delay="0.3s"></div>
                   <capture>
                      <h3>разработка маркетинг кит</h3>
                      <p>Физический носитель бизнес концепции. Лучший <br>
@@ -180,7 +180,7 @@
             </a>
             <div class="col-xs-12 col-md-6 service-box">
                <a class="pagelink" href="#">
-                  <div class="service-five wow zoomIn" data-wow-delay="0.4s"></div>
+                  <div class="service-five wow zoomIn" data-wow-delay="0.3s"></div>
                   <capture>
                      <h3>брендинг</h3>
                      <p>Ваш бренд это ваш бизнес. Визуальная система, <br>
@@ -366,8 +366,8 @@
                   <h3>каждый из наших проектов?</h3>
                </div>
                <div class="col-xs-12 col-md-4 advantage-box">
-                  <div class="advantage-one wow zoomIn" data-wow-delay="0.5s"></div>
-                  <div class="capture wow zoomIn" data-wow-delay="0.6s">
+                  <div class="advantage-one wow zoomIn" data-wow-delay="0.3s"></div>
+                  <div class="capture wow zoomIn" data-wow-delay="0.4s">
                      <h3>Изучаем ваш бизнес и <br class="hidden-sm hidden-xs">
                         Анализируем его
                      </h3>
@@ -382,8 +382,8 @@
                   </div>
                </div>
                <div class="col-xs-12 col-md-4 advantage-box">
-                  <div class="advantage-two wow zoomIn" data-wow-delay="0.5s"></div>
-                  <div class="capture wow zoomIn" data-wow-delay="0.6s">
+                  <div class="advantage-two wow zoomIn" data-wow-delay="0.3s"></div>
+                  <div class="capture wow zoomIn" data-wow-delay="0.4s">
                      <h3>Экономим ваше время и <br>
                         деньги, "рабтая под ключ"
                      </h3>
@@ -395,8 +395,8 @@
                   </div>
                </div>
                <div class="col-xs-12 col-md-4 advantage-box">
-                  <div class="advantage-three wow zoomIn" data-wow-delay="0.5s"></div>
-                  <div class="capture wow zoomIn" data-wow-delay="0.6s">
+                  <div class="advantage-three wow zoomIn" data-wow-delay="0.3s"></div>
+                  <div class="capture wow zoomIn" data-wow-delay="0.4s">
                      <h3>Никаких <br>
                         “глухих телефончиков”
                      </h3>
@@ -409,8 +409,8 @@
             </div>
             <div class="row">
                <div class="col-xs-12 col-md-4 advantage-box">
-                  <div class="advantage-four wow zoomIn" data-wow-delay="0.5s"></div>
-                  <div class="capture wow zoomIn" data-wow-delay="0.6s">
+                  <div class="advantage-four wow zoomIn" data-wow-delay="0.3s"></div>
+                  <div class="capture wow zoomIn" data-wow-delay="0.4s">
                      <h3>на связи 20 часов в сутки, <br>
                         7 дней в неделю
                      </h3>
@@ -422,8 +422,8 @@
                   </div>
                </div>
                <div class="col-xs-12 col-md-4 advantage-box">
-                  <div class="advantage-five wow zoomIn" data-wow-delay="0.5s"></div>
-                  <div class="capture wow zoomIn" data-wow-delay="0.6s">
+                  <div class="advantage-five wow zoomIn" data-wow-delay="0.3s"></div>
+                  <div class="capture wow zoomIn" data-wow-delay="0.4s">
                      <h3>нам нравится <br>
                         делиться информацией. <br> 
                         бесплатно.
@@ -465,11 +465,11 @@
                   </ul>
                </div>
                <div class="col-md-4 col-xs-12">
-                  <input type="text" placeholder="Ваше имя"><br>
+                  <input type="text"  requared placeholder="Ваше имя"><br>
                   <input type="email" placeholder="Ваш e-mail (необязательно)">
                </div>
                <div class="col-md-4 col-xs-12">
-                  <input type="tel" placeholder="Ваш телефон"><br>
+                  <input type="tel" requared placeholder="Ваш телефон"><br>
                   <button class="callback-button" href="#">Оставить заявку</button>
                </div>
             </div>
