mobile_menu_with_collapse_services

--- a/index.html
+++ b/index.html
@@ -61,7 +61,35 @@
                         <!-- mobile menu -->
                         <ul class="nav mobile">
                            <li class="active"><a href="#">Главная</a></li>
-                           <li><a href="#">Услуги</a></li>
+                           
+
+
+                           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                              <div>
+                                 <div  role="tab" id="headingOne">
+                                    <li class="panel-title">
+                                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                          Услуги
+                                       </a>
+                                    </li>
+                                 </div>
+                                 <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                                    <div class="panel-body">
+                                       <ul class="mobile">
+                                          <li><a href="#">Сайты</a></li>
+                                          <li><a href="#">Лендинги</a></li>
+                                          <li><a href="#">Привлечение клиентов</a></li>
+                                          <li><a href="#">Маркетинг Кит</a></li>
+                                          <li><a href="#">Брендинг</a></li>
+                                          <li><a href="#">Иллюстрация</a></li>
+                                       </ul>
+                                    </div>
+                                 </div>
+                              </div>
+
+
+
+
                            <li><a href="#">Портфолио</a></li>
                            <li><a href="#">Контакты</a></li>
                         </ul>
